--- a/ruoyi-admin/src/main/resources/templates/system/user/print.html
+++ b/ruoyi-admin/src/main/resources/templates/system/user/print.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html lang="zh" xmlns:th="http://www.thymeleaf.org" xmlns:shiro="http://www.pollix.at/thymeleaf/shiro">
 <head>
-	<th:block th:include="include :: header('用户列表')" />
+	<th:block th:include="include :: header('天气信息列表')" />
 	<th:block th:include="include :: layout-latest-css" />
-	<th:block th:include="include :: ztree-css" />
 </head>
 <body class="gray-bg">
 
