--- a/ruoyi-admin/src/main/resources/templates/weather/weather/statistics.html
+++ b/ruoyi-admin/src/main/resources/templates/weather/weather/statistics.html
@@ -22,10 +22,10 @@
 <div>哈哈哈</div>
 <div class="wrapper wrapper-content animated fadeInRight">
     <div class="row">
-        <div class="col-sm-6">
+        <div class="col-sm-12">
             <div class="ibox float-e-margins">
                 <div class="ibox-title">
-                    <h5>柱状图</h5>
+                    <h5>折线图</h5>
                     <div class="ibox-tools">
                         <a class="collapse-link">
                             <i class="fa fa-chevron-up"></i>
@@ -45,13 +45,11 @@
                     </div>
                 </div>
                 <div class="ibox-content">
-
-                    <div class="echarts" id="echarts-bar-chart"></div>
+                    <div class="echarts" id="echarts-line-chart"></div>
                 </div>
             </div>
         </div>
     </div>
-
 </div>
 
 <script> var ctx = "\/"; var lockscreen = null; if(lockscreen){window.top.location=ctx+"lockscreen";} </script>
@@ -81,29 +79,34 @@
 
 <script type="text/javascript">
     $(function () {
-        var userCountByMonth = [2.0, 4.9, 7.0, 23.2, 25.6, 76.7, 135.6, 162.2, 32.6, 20.0, 6.4, 3.3];
+        var monthHighT = null;
+        var monthLowT = null;
         $.ajax({
             type: 'post',
             url: 'statistics',
             async: false,
             success: function(res) {
+                //console.log("收到");
                 console.log(res);
-                userCountByMonth = res;
+                monthLowT = res.slice(31,62);
+                monthHighT = res.splice(0,31);
+                console.log(monthLowT);
+                console.log(monthHighT);
             }
         });
-        var barChart = echarts.init(document.getElementById("echarts-bar-chart"));
-        var baroption = {
+        var lineChart = echarts.init(document.getElementById("echarts-line-chart"));
+        var lineoption = {
             title : {
-                text: '每月用户注册统计'
+                text: '本月气温变化'
             },
             tooltip : {
                 trigger: 'axis'
             },
             legend: {
-                data:['注册数目']
+                data:['最高气温','最低气温']
             },
             grid:{
-                x:30,
+                x:40,
                 x2:40,
                 y2:24
             },
@@ -111,19 +114,26 @@
             xAxis : [
                 {
                     type : 'category',
-                    data : ['1月','2月','3月','4月','5月','6月','7月','8月','9月','10月','11月','12月']
+                    boundaryGap : false,
+                    data : ['1日','2日','3日','4日','5日','6日','7日','8日','9日','10日',
+                        '11日','12日','13日','14日','15日','16日','17日','18日','19日','20日'
+                        ,'21日','22日','23日','24日','25日','26日','27日','28日','29日','30日','31日']
                 }
             ],
             yAxis : [
                 {
-                    type : 'value'
+                    type : 'value',
+                    axisLabel : {
+                        formatter: '{value} °C'
+                    }
                 }
             ],
             series : [
                 {
-                    name:'用户注册数目',
-                    type:'bar',
-                    data: userCountByMonth,
+                    name:'最高气温',
+                    type:'line',
+                    //data:[11, 11, 15, 13, 12, 13, 10],
+                    data: monthHighT,
                     markPoint : {
                         data : [
                             {type : 'max', name: '最大值'},
@@ -135,13 +145,27 @@
                             {type : 'average', name: '平均值'}
                         ]
                     }
+                },
+                {
+                    name:'最低气温',
+                    type:'line',
+                    //data:[1, -2, 2, 5, 3, 2, 0],
+                    data: monthLowT,
+                    markPoint : {
+                        data : [
+                            {name : '周最低', value : -2, xAxis: 1, yAxis: -1.5}
+                        ]
+                    },
+                    markLine : {
+                        data : [
+                            {type : 'average', name : '平均值'}
+                        ]
+                    }
                 }
             ]
         };
-        barChart.setOption(baroption);
-
-        window.onresize = barChart.resize;
-
+        lineChart.setOption(lineoption);
+        $(window).resize(lineChart.resize);
     });
 </script>
 </body>
