--- a/ruoyi-admin/src/main/resources/templates/clientspecialtyorder/clientorder/comment.html
+++ b/ruoyi-admin/src/main/resources/templates/clientspecialtyorder/clientorder/comment.html
@@ -29,11 +29,28 @@
         </div>
 
         <div class="form-group">
-            <label class="col-sm-3 control-label is-required">照片：</label>
+            <label class="col-sm-3 control-label">照片：</label>
             <div class="col-sm-8">
-                <input name="photo"  class="form-control" type="text" required>
+                <!--                <img id="menuIconImg" src="/news/default_images/dir.png" alt="图标加载失败" style="width-max: 100px;max-height: 50px;margin-right: 50px">-->
+                <button class="btn btn-primary" type="button" onclick="uploadIconBtn(this)" id="uploadButton">
+                    <i class="fa fa-upload"></i>&nbsp;&nbsp;<span class="bold" id="uploadSpan">上传</span>
+                </button>
             </div>
         </div>
+
+        <div class="form-group" id="uploadDiv">
+            <label class="font-noraml">照片上传</label>
+            <div class="file-loading">
+                <input class="file" type="file" name="newsMenuIconFile" id="fileinput" data-min-file-count="1" data-theme="fas">
+            </div>
+        </div>
+        <div id="hiddenData"  style="visibility: visible">
+
+            <!--            用来存放上传成功的图片的input-->
+        </div>
+
+
+
     </form>
 </div>
 <th:block th:include="include :: footer" />
@@ -49,33 +66,62 @@
             $.operate.save(prefix + "/comment", $('#form-clientorder-comment').serialize());
         }
     }
-    // <th:block th:include="include :: footer" />
-    // <th:block th:include="include :: summernote-js" />
-    // console.log("进入js");
-    // var roomRecordId,score,comment,photo;
-    // var id=$("#id").val();
-    // console.log("id="+id);
-    // var data={};
-    // data.id=id;
-    // $.ajax({
-    //     type: 'post',
-    //     url: '/clienthomeorder/homeorder/comment',
-    //     async: false,
-    //     data: data,
-    //     success: function(res) {
-    //         console.log(res);
-    //         let json = eval( "(" + res + ")" );
-    //         roomRecordId= json.roomRecordId;
-    //         score=json.score;
-    //         comment=json.comment;
-    //         photo=json.photo;
-    //     }
-    // });
-    // document.getElementById("roomRecordId").value=roomRecordId;
-    // document.getElementById("score").value=score;
-    // document.getElementById("comment").value=comment;
-    // document.getElementById("photo").value=photo;
-
 </script>
+
+<!-- 默认上传图标div隐藏 -->
+<script>
+    /* hide uploadDiv */
+    $(function() {
+        var div = $("#uploadDiv");
+        div.hide();
+    });
+    /* click the id is uploadIconBtn button to display the id is uploadDiv div*/
+    function uploadIconBtn(btn) {
+        var $span = $("#uploadSpan");
+        var uploadDiv = $("#uploadDiv");
+        // console.log($span[0].innerText);
+        if ($span[0].innerText == "上传") {
+            uploadDiv.show();
+            $span[0].innerText = "取消上传";
+        } else {
+            uploadDiv.hide();
+            $span[0].innerText = "上传";
+        }
+    }
+</script>
+<!-- 图片上传 -->
+<script type="text/javascript">
+    $(function() {
+        $("#fileinput").fileinput({
+            uploadUrl: '/clientspecialtyorder/clientorder/menuIconUpload',
+            maxFileCount: 1,
+            maxFileSize: 1024*3,
+            allowedFileTypes: 'jpg,png',
+            initialPreviewAsData: true,
+            overwriteInitial: true,
+            initialPreview: [
+                "/news/default_images/dir.png"
+            ]
+        }).on("fileuploaded", function (event, data, previewId, index) {
+            // 图片上传成功
+            var previewImage = $(".file-preview-image")[0]; // 获取预览图片
+            $("#menuIconImg")[0].src = previewImage.src; // 预览图片在id为menuIconImg中显示
+            // 获取/news/menu/menuIconUpload接口返回的数据。
+            var fileStoragePath = data.response.fileStoragePath;
+            var genFilename = data.response.genFilename;
+            var URL = fileStoragePath + "\\" +genFilename;
+            console.log(URL);
+            System.out.println
+            console.dir("图片上传成功！URL："+URL);
+            // 隐藏不必要的div和按钮
+            $("#uploadDiv").hide(); // 隐藏取div
+            $("#uploadButton").hide(); // 隐藏上传按钮
+            $.modal.msgSuccess("图片上传成功！"); // 提示框
+            $("#hiddenData").append('<input type="text" value="'+URL+'" name="newsMenuIcon">'); // 创建一个input存储URL
+        })
+    });
+</script>
+<!-- 文件上传js导入（一定要放在最后面） -->
+<th:block th:include="include :: bootstrap-fileinput-js"/>
 </body>
 </html>
