--- a/ruoyi-admin/src/main/resources/templates/system/room/statistics.html
+++ b/ruoyi-admin/src/main/resources/templates/system/room/statistics.html
@@ -82,6 +82,7 @@
 <script type="text/javascript">
     $(function () {
         var userCountByMonth;
+        console.log("jjjj");
         $.ajax({
             type: 'post',
             url: 'statistics',
@@ -94,7 +95,7 @@
         var barChart = echarts.init(document.getElementById("echarts-bar-chart"));
         var baroption = {
             title : {
-                text: '每月用户注册统计'
+                text: '房源出售情况统计'
             },
             tooltip : {
                 trigger: 'axis'
@@ -111,7 +112,7 @@
             xAxis : [
                 {
                     type : 'category',
-                    data : ['1月','2月','3月','4月','5月','6月','7月','8月','9月','10月','11月','12月']
+                    data : ['已预定','未预定']
                 }
             ],
             yAxis : [
@@ -121,7 +122,7 @@
             ],
             series : [
                 {
-                    name:'用户注册数目',
+                    name:'房源数目',
                     type:'bar',
                     data: userCountByMonth,
                     markPoint : {
