--- a/ruoyi-admin/src/main/resources/templates/system/user/resetPwd.html
+++ b/ruoyi-admin/src/main/resources/templates/system/user/resetPwd.html
@@ -11,6 +11,7 @@
 				<label class="col-sm-3 control-label">登录名称：</label>
 				<div class="col-sm-8">
 					<input class="form-control" type="text" readonly="true" name="loginName" th:value="${user.loginName}"/>
+<!--					<input class="form-control" type="text" readonly="true" name="loginName"/>-->
 				</div>
 			</div>
 			<div class="form-group">
@@ -33,7 +34,7 @@
 			},
 			focusCleanup: true
 		});
-		
+
 		function submitHandler() {
 	        if ($.validate.form()) {
 	        	$.operate.save(ctx + "system/user/resetPwd", $('#form-user-resetPwd').serialize());
