订单管理还差查询评论

--- a/ruoyi-admin/src/main/resources/templates/clientspecialtyorder/clientorder/clientorder.html
+++ b/ruoyi-admin/src/main/resources/templates/clientspecialtyorder/clientorder/clientorder.html
@@ -137,31 +137,38 @@
                 {
                     field: 'id',
                     title: '订单ID',
+                    sortable: 'true'
                     // visible: false
                 },
                 {
                     field: 'userName',
-                    title: '账户名'
+                    title: '账户名',
+                    sortable: 'true'
                 },
                 {
                     field: 'specialtyId',
-                    title: '特产ID'
+                    title: '特产ID',
+                    sortable: 'true'
                 },
                 {
                     field: 'quantity',
-                    title: '订货量'
+                    title: '订货量',
+                    sortable: 'true'
                 },
                 {
                     field: 'price',
-                    title: '订单价格'
+                    title: '订单价格',
+                    sortable: 'true'
                 },
                 {
                     field: 'orderTime',
-                    title: '下单时间'
+                    title: '下单时间',
+                    sortable: 'true'
                 },
                 {
                     field: 'finishTime',
-                    title: '订单完成时间'
+                    title: '订单完成时间',
+                    sortable: 'true'
                 },
                 {
                     field: 'isReceived',
