--- a/ruoyi-admin/src/main/resources/templates/clienthomeorder/homeorder/homeorder.html
+++ b/ruoyi-admin/src/main/resources/templates/clienthomeorder/homeorder/homeorder.html
@@ -85,9 +85,9 @@
             </div>
 
             <div class="btn-group-sm" id="toolbar" role="group">
-<!--                <a class="btn btn-success" onclick="$.operate.add()" shiro:hasPermission="clienthomeorder:homeorder:add">-->
-<!--                    <i class="fa fa-plus"></i> 添加-->
-<!--                </a>-->
+                <a class="btn btn-success" onclick="$.operate.add()" shiro:hasPermission="clienthomeorder:homeorder:add">
+                    <i class="fa fa-plus"></i> 添加
+                </a>
                 <a class="btn btn-primary single disabled" onclick="$.operate.edit()" shiro:hasPermission="clienthomeorder:homeorder:edit">
                     <i class="fa fa-edit"></i> 修改
                 </a>
@@ -141,6 +141,7 @@
                 {
                     field: 'id',
                     title: '订单ID',
+                    sortable: 'true'
                     // visible: false
                 },
                 {
@@ -150,31 +151,38 @@
                 },
                 {
                     field: 'userName',
-                    title: '用户名'
+                    title: '用户名',
+                    sortable: 'true'
                 },
                 {
                     field: 'roomId',
-                    title: '房间ID'
+                    title: '房间ID',
+                    sortable: 'true'
                 },
                 {
                     field: 'checkInDate',
-                    title: '预计入住时间'
+                    title: '预计入住时间',
+                    sortable: 'true'
                 },
                 {
                     field: 'checkOutDate',
-                    title: '预计退房时间'
+                    title: '预计退房时间',
+                    sortable: 'true'
                 },
                 {
                     field: 'reserveInDate',
-                    title: '实际入住时间'
+                    title: '实际入住时间',
+                    sortable: 'true'
                 },
                 {
                     field: 'reserveOutDate',
-                    title: '实际退房时间'
+                    title: '实际退房时间',
+                    sortable: 'true'
                 },
                 {
                     field: 'price',
-                    title: '价格'
+                    title: '价格',
+                    sortable: 'true'
                 },
                 {
                     field: 'isPaid',
