--- a/ruoyi-admin/src/main/resources/templates/landlordhomeorder/landlordorder/edit.html
+++ b/ruoyi-admin/src/main/resources/templates/landlordhomeorder/landlordorder/edit.html
@@ -8,12 +8,12 @@
     <div class="wrapper wrapper-content animated fadeInRight ibox-content">
         <form class="form-horizontal m" id="form-landlordorder-edit" th:object="${landlordRoomRecord}">
             <input name="id" th:field="*{id}" type="hidden">
-            <div class="form-group">    
-                <label class="col-sm-3 control-label is-required">顾客账号：</label>
-                <div class="col-sm-8">
-                    <input name="clientNumber" th:field="*{clientNumber}" class="form-control" type="text" required>
-                </div>
-            </div>
+<!--            <div class="form-group">    -->
+<!--                <label class="col-sm-3 control-label is-required">顾客账号：</label>-->
+<!--                <div class="col-sm-8">-->
+<!--                    <input name="clientNumber" th:field="*{clientNumber}" class="form-control" type="hidden" >-->
+<!--                </div>-->
+<!--            </div>-->
             <div class="form-group">    
                 <label class="col-sm-3 control-label is-required">房间ID：</label>
                 <div class="col-sm-8">
