--- a/ruoyi-admin/src/main/resources/templates/landlordhomeorder/landlordorder/landlordorder.html
+++ b/ruoyi-admin/src/main/resources/templates/landlordhomeorder/landlordorder/landlordorder.html
@@ -32,7 +32,11 @@
                     <div class="select-list">
                         <ul>
                             <li>
-                                <label>用户名：</label>
+<!--                                <label>房东：</label>-->
+                                <input type="hidden" name="${@permission.getPrincipalProperty('userName')}" />
+                            </li>
+                            <li>
+                                <label>顾客账号：</label>
                                 <input type="text" name="clientNumber"/>
                             </li>
                             <li>
@@ -138,32 +142,44 @@
                     visible: false
                 },
                 {
-                    field: 'userName',
-                    title: '用户名'
+                        field: 'clientNumber',
+                        title: '用户账号',
+                        sortable: 'true'
                 },
                 {
+                        field: 'loginName',
+                        title: '用户名',
+                        sortable: 'true'
+                 },
+                {
                     field: 'roomId',
-                    title: '房间ID'
+                    title: '房间ID',
+                    sortable: 'true'
                 },
                 {
                     field: 'checkInDate',
-                    title: '预计入住时间'
+                    title: '预计入住时间',
+                    sortable: 'true'
                 },
                 {
                     field: 'checkOutDate',
-                    title: '预计退房时间'
+                    title: '预计退房时间',
+                    sortable: 'true'
                 },
                 {
                     field: 'reserveInDate',
-                    title: '实际入住时间'
+                    title: '实际入住时间',
+                    sortable: 'true'
                 },
                 {
                     field: 'reserveOutDate',
-                    title: '实际退房时间'
+                    title: '实际退房时间',
+                    sortable: 'true'
                 },
                 {
                     field: 'price',
-                    title: '价格'
+                    title: '价格',
+                    sortable: 'true'
                 },
                 {
                     field: 'isPaid',
@@ -186,7 +202,7 @@
                     align: 'center',
                     formatter: function(value, row, index) {
                         var actions = [];
-                        actions.push('<a class="btn btn-success btn-xs ' + editFlag + '" href="javascript:void(0)" onclick="$.operate.edit(\'' + row.id + '\')"><i class="fa fa-edit"></i>评价</a> ');
+                        actions.push('<a class="btn btn-success btn-xs ' + editFlag + '" href="javascript:void(0)" onclick="$.operate.edit(\'' + row.id + '\')"><i class="fa fa-edit"></i>查看评价</a> ');
                         // actions.push('<a class="btn btn-danger btn-xs ' + removeFlag + '" href="javascript:void(0)" onclick="$.operate.remove(\'' + row.id + '\')"><i class="fa fa-remove"></i>删除</a>');
                         return actions.join('');
                     }
