--- a/ruoyi-admin/src/main/resources/templates/landlordspecialtyorder/specialtyorder/add.html
+++ b/ruoyi-admin/src/main/resources/templates/landlordspecialtyorder/specialtyorder/add.html
@@ -25,8 +25,8 @@
                     <input name="quantity" class="form-control" type="text" required>
                 </div>
             </div>
-            <div class="form-group">    
-                <label class="col-sm-3 control-label is-required">订单价格：</label>
+            <div class="form-group">
+                <label class="col-sm-3 control-label is-required">订单单价：</label>
                 <div class="col-sm-8">
                     <input name="price" class="form-control" type="text" required>
                 </div>
@@ -49,8 +49,8 @@
                     </div>
                 </div>
             </div>
-            <div class="form-group">    
-                <label class="col-sm-3 control-label is-required">是否收获：</label>
+            <div class="form-group">
+                <label class="col-sm-3 control-label is-required">是否收货：</label>
                 <div class="col-sm-8">
                     <select name="isReceived" class="form-control m-b" th:with="type=${@dict.getType('sys_user_is_received')}" required>
                         <option th:each="dict : ${type}" th:text="${dict.dictLabel}" th:value="${dict.dictValue}"></option>
@@ -65,7 +65,7 @@
                     </select>
                 </div>
             </div>
-            <div class="form-group">    
+            <div class="form-group">
                 <label class="col-sm-3 control-label is-required">订单是否完成：</label>
                 <div class="col-sm-8">
                     <select name="isDone" class="form-control m-b" th:with="type=${@dict.getType('sys_user_is_done')}" required>
