--- a/ruoyi-admin/src/main/resources/templates/clienthomeorder/homeorder/homeorder.html
+++ b/ruoyi-admin/src/main/resources/templates/clienthomeorder/homeorder/homeorder.html
@@ -31,11 +31,14 @@
                 <form id="formId">
                     <div class="select-list">
                         <ul>
-                            <li>
-                                <label>用户名：</label>
+<!--                                <label>用户名：</label>-->
 <!--                                <input type="text" name="userName"/>-->
 <!--                                <input th:value="${@permission.getPrincipalProperty('userName')}">-->
-                                <input type="text" name="${@permission.getPrincipalProperty('userName')}"/>
+                                <input type="hidden" name="${@permission.getPrincipalProperty('userName')}"/>
+
+                            <li>
+                                <label>订单ID：</label>
+                                <input type="text" name="id"/>
                             </li>
                             <li>
                                 <label>房间ID：</label>
@@ -85,9 +88,9 @@
             </div>
 
             <div class="btn-group-sm" id="toolbar" role="group">
-                <a class="btn btn-success" onclick="$.operate.add()" shiro:hasPermission="clienthomeorder:homeorder:add">
-                    <i class="fa fa-plus"></i> 添加
-                </a>
+<!--                <a class="btn btn-success" onclick="$.operate.add()" shiro:hasPermission="clienthomeorder:homeorder:add">-->
+<!--                    <i class="fa fa-plus"></i> 添加-->
+<!--                </a>-->
                 <a class="btn btn-primary single disabled" onclick="$.operate.edit()" shiro:hasPermission="clienthomeorder:homeorder:edit">
                     <i class="fa fa-edit"></i> 修改
                 </a>
@@ -142,7 +145,6 @@
                     field: 'id',
                     title: '订单ID',
                     sortable: 'true'
-                    // visible: false
                 },
                 {
                     field: 'clientNumber',
@@ -206,7 +208,7 @@
                     formatter: function(value, row, index) {
                         var actions = [];
                          actions.push('<a class="btn btn-success btn-xs ' + commentsFlag + '" href="javascript:void(0)" onclick="$.operate.comment(\'' + row.id + '\')"><i class="fa fa-add"></i>评价</a> ');
-                         actions.push('<a class="btn btn-danger btn-xs ' + editFlag + '" href="javascript:void(0)" onclick="$.operate.edit(\'' + row.id + '\')"><i class="fa fa-remove"></i>删除</a>');
+                         // actions.push('<a class="btn btn-danger btn-xs ' + editFlag + '" href="javascript:void(0)" onclick="$.operate.edit(\'' + row.id + '\')"><i class="fa fa-remove"></i>删除</a>');
                         return actions.join('');
                     }
                 }]
