--- a/ruoyi-admin/src/main/resources/templates/landlordhomeorder/landlordorder/landlordorder.html
+++ b/ruoyi-admin/src/main/resources/templates/landlordhomeorder/landlordorder/landlordorder.html
@@ -31,10 +31,8 @@
                 <form id="formId">
                     <div class="select-list">
                         <ul>
-                            <li>
 <!--                                <label>房东：</label>-->
                                 <input type="hidden" name="${@permission.getPrincipalProperty('userName')}" />
-                            </li>
                             <li>
                                 <label>顾客账号：</label>
                                 <input type="text" name="clientNumber"/>
@@ -121,6 +119,7 @@
     <script th:inline="javascript">
         var editFlag = [[${@permission.hasPermi('landlordhomeorder:landlordorder:edit')}]];
         var removeFlag = [[${@permission.hasPermi('landlordhomeorder:landlordorder:remove')}]];
+        var querycommentsFlag = [[${@permission.hasPermi('landlordhomeorder:landlordorder:querycomment')}]];
         var isPaidDatas = [[${@dict.getType('sys_user_is_paid')}]];
         var isDoneDatas = [[${@dict.getType('sys_user_is_done')}]];
         var prefix = ctx + "landlordhomeorder/landlordorder";
@@ -130,6 +129,7 @@
                 url: prefix + "/list",
                 createUrl: prefix + "/add",
                 updateUrl: prefix + "/edit/{id}",
+                queryUrl:prefix+"/querycomment/{id}",
                 removeUrl: prefix + "/remove",
                 exportUrl: prefix + "/export",
                 modalName: "民宿订单",
@@ -139,7 +139,7 @@
                 {
                     field: 'id',
                     title: '订单ID',
-                    visible: false
+
                 },
                 {
                         field: 'clientNumber',
@@ -202,7 +202,7 @@
                     align: 'center',
                     formatter: function(value, row, index) {
                         var actions = [];
-                        actions.push('<a class="btn btn-success btn-xs ' + editFlag + '" href="javascript:void(0)" onclick="$.operate.edit(\'' + row.id + '\')"><i class="fa fa-edit"></i>查看评价</a> ');
+                        actions.push('<a class="btn btn-success btn-xs ' + querycommentsFlag + '" href="javascript:void(0)" onclick="$.operate.querycomment(\'' + row.id + '\')"><i class="fa fa-edit"></i>查看评价</a> ');
                         // actions.push('<a class="btn btn-danger btn-xs ' + removeFlag + '" href="javascript:void(0)" onclick="$.operate.remove(\'' + row.id + '\')"><i class="fa fa-remove"></i>删除</a>');
                         return actions.join('');
                     }
