--- a/ruoyi-admin/src/main/resources/templates/system/role/add.html
+++ b/ruoyi-admin/src/main/resources/templates/system/role/add.html
@@ -20,12 +20,12 @@
 					<span class="help-block m-b-none"><i class="fa fa-info-circle"></i> 控制器中定义的权限字符，如：@RequiresRoles("")</span>
 				</div>
 			</div>
-			<div class="form-group">
-				<label class="col-sm-3 control-label is-required">显示顺序：</label>
-				<div class="col-sm-8">
-					<input class="form-control" type="text" name="roleSort" id="roleSort" required>
-				</div>
-			</div>
+<!--			<div class="form-group">-->
+<!--				<label class="col-sm-3 control-label is-required">显示顺序：</label>-->
+<!--				<div class="col-sm-8">-->
+<!--					<input class="form-control" type="text" name="roleSort" id="roleSort" required>-->
+<!--				</div>-->
+<!--			</div>-->
 			<div class="form-group">
 				<label class="col-sm-3 control-label">状态：</label>
 				<div class="col-sm-8">
@@ -44,12 +44,12 @@
 			<div class="form-group">
 				<label class="col-sm-3 control-label">菜单权限：</label>
 				<div class="col-sm-8">
-				    <label class="check-box">
-				        <input type="checkbox" value="1">展开/折叠</label>
-				    <label class="check-box">
-				        <input type="checkbox" value="2">全选/全不选</label>
-				    <label class="check-box">
-				        <input type="checkbox" value="3" checked>父子联动</label>
+<!--				    <label class="check-box">-->
+<!--				        <input type="checkbox" value="1">展开/折叠</label>-->
+<!--				    <label class="check-box">-->
+<!--				        <input type="checkbox" value="2">全选/全不选</label>-->
+<!--				    <label class="check-box">-->
+<!--				        <input type="checkbox" value="3" checked>父子联动</label>-->
 				    <div id="menuTrees" class="ztree ztree-border"></div>
 				</div>
 			</div>
@@ -87,24 +87,24 @@
 		                }
 		            }
 				},
-				roleKey:{
+				roleKey: {
 					remote: {
-		                url: ctx + "system/role/checkRoleKeyUnique",
-		                type: "post",
-		                dataType: "json",
-		                data: {
-		                	"roleKey" : function() {
-		                        return $.common.trim($("#roleKey").val());
-		                    }
-		                },
-		                dataFilter: function(data, type) {
-		                	return $.validate.unique(data);
-		                }
-		            }
-				},
-				roleSort:{
-					digits:true
-				},
+						url: ctx + "system/role/checkRoleKeyUnique",
+						type: "post",
+						dataType: "json",
+						data: {
+							"roleKey": function () {
+								return $.common.trim($("#roleKey").val());
+							}
+						},
+						dataFilter: function (data, type) {
+							return $.validate.unique(data);
+						}
+					}
+				}//,
+				// roleSort:{
+				// 	digits:true
+				// },
 			},
 			messages: {
 		        "roleName": {
@@ -150,7 +150,8 @@
 		function add() {
 			var roleName = $("input[name='roleName']").val();
 			var roleKey = $("input[name='roleKey']").val();
-			var roleSort = $("input[name='roleSort']").val();
+			//var roleSort = $("input[name='roleSort']").val();
+			var roleSort = 1;
 			var status = $("input[id='status']").is(':checked') == true ? 0 : 1;
 			var remark = $("input[name='remark']").val();
 			var menuIds = $.tree.getCheckedNodes();
