--- a/ruoyi-admin/src/main/resources/templates/system/role/edit.html
+++ b/ruoyi-admin/src/main/resources/templates/system/role/edit.html
@@ -21,12 +21,14 @@
 					<span class="help-block m-b-none"><i class="fa fa-info-circle"></i> 控制器中定义的权限字符，如：@RequiresRoles("")</span>
 				</div>
 			</div>
+<!--
 			<div class="form-group">
 				<label class="col-sm-3 control-label is-required">显示顺序：</label>
 				<div class="col-sm-8">
 					<input class="form-control" type="text" name="roleSort" id="roleSort" th:field="*{roleSort}" required>
 				</div>
 			</div>
+-->
 			<div class="form-group">
 				<label class="col-sm-3 control-label">状态：</label>
 				<div class="col-sm-8">
@@ -45,12 +47,12 @@
 			<div class="form-group">
 				<label class="col-sm-3 control-label">菜单权限：</label>
 				<div class="col-sm-8">
-				    <label class="check-box">
-				        <input type="checkbox" value="1">展开/折叠</label>
-				    <label class="check-box">
-				        <input type="checkbox" value="2">全选/全不选</label>
-				    <label class="check-box">
-				        <input type="checkbox" value="3" checked>父子联动</label>
+<!--				    <label class="check-box">-->
+<!--				        <input type="checkbox" value="1">展开/折叠</label>-->
+<!--				    <label class="check-box">-->
+<!--				        <input type="checkbox" value="2">全选/全不选</label>-->
+<!--				    <label class="check-box">-->
+<!--				        <input type="checkbox" value="3" checked>父子联动</label>-->
 				    <div id="menuTrees" class="ztree ztree-border"></div>
 				</div>
 			</div>
@@ -108,10 +110,10 @@
 		                	return $.validate.unique(data);
 		                }
 		            }
-				},
-				roleSort:{
-					digits:true
-				},
+				}//,
+				//roleSort:{
+				//	digits:true
+				//},
 			},
 			messages: {
 		        "roleName": {
@@ -152,7 +154,8 @@
 			var roleId = $("input[name='roleId']").val();
 			var roleName = $("input[name='roleName']").val();
 			var roleKey = $("input[name='roleKey']").val();
-			var roleSort = $("input[name='roleSort']").val();
+			//var roleSort = $("input[name='roleSort']").val();
+			var roleSort = 1;
 			var status = $("input[id='status']").is(':checked') == true ? 0 : 1;
 			var remark = $("input[name='remark']").val();
 			var menuIds = $.tree.getCheckedNodes();
