--- a/ruoyi-admin/src/main/resources/templates/system/role/role.html
+++ b/ruoyi-admin/src/main/resources/templates/system/role/role.html
@@ -2,6 +2,27 @@
 <html lang="zh" xmlns:th="http://www.thymeleaf.org" xmlns:shiro="http://www.pollix.at/thymeleaf/shiro">
 <head>
 	<th:block th:include="include :: header('角色列表')" />
+
+	<style>
+		@media print {
+			.fixed-table-toolbar {
+				display: none;
+			}
+
+			.noprint {
+				display: none;
+			}
+
+			.fixed-table-pagination {
+				display: none !important;
+			}
+
+		}
+		@page {
+			size: auto;
+			margin: 0mm;
+		}
+	</style>
 </head>
 <body class="gray-bg">
 	<div class="container-div">
@@ -41,19 +62,21 @@
 				<a class="btn btn-success" onclick="$.operate.add()" shiro:hasPermission="system:role:add">
 	                <i class="fa fa-plus"></i> 新增
 	            </a>
-	            <a class="btn btn-primary single disabled" onclick="$.operate.edit()" shiro:hasPermission="system:role:edit">
-		            <i class="fa fa-edit"></i> 修改
-		        </a>
 				<a class="btn btn-danger multiple disabled" onclick="$.operate.removeAll()" shiro:hasPermission="system:role:remove">
 		            <i class="fa fa-remove"></i> 删除
 		        </a>
 		        <a class="btn btn-warning" onclick="$.table.exportExcel()" shiro:hasPermission="system:role:export">
 		            <i class="fa fa-download"></i> 导出
 		        </a>
+				<a class="btn btn-success" onclick="printHtml();" shiro:hasPermission="system:role:print">
+					<i class="fa fa-plus"></i> 打印
+				</a>
+				<a class="btn btn-success" onclick="$.modal.openTab('权限信息统计', '/system/role/statistics');" shiro:hasPermission="weather:weather:statistics">
+					<i class="fa fa-plus"></i> 统计
+				</a>
 	        </div>
-	        
-	        <div class="col-sm-12 select-table table-striped">
-			    <table id="bootstrap-table"></table>
+			<div class="col-sm-12 select-table table-striped noprint" id="prints" style="width: 100%;">
+				<table id="bootstrap-table" style="width: 100%;word-break:break-all; word-wrap:break-all; "></table>
 			</div>
 		</div>
 	</div>
@@ -71,14 +94,11 @@
 		        updateUrl: prefix + "/edit/{id}",
 		        removeUrl: prefix + "/remove",
 		        exportUrl: prefix + "/export",
-		        sortName: "roleSort",
+		        //sortName: "roleSort",
 		        modalName: "角色",
 		        columns: [{
-		            checkbox: true
-		        },
-		        {
-		            field: 'roleId',
-		            title: '角色编号'
+		            checkbox: true,
+					field: 'checkbox'
 		        },
 		        {
 		            field: 'roleName',
@@ -88,11 +108,6 @@
 		        {
 		            field: 'roleKey',
 		            title: '权限字符',
-		            sortable: true
-		        },
-		        {
-		            field: 'roleSort',
-		            title: '显示顺序',
 		            sortable: true
 		        },
 		        {
@@ -111,15 +126,12 @@
 		        {
 		            title: '操作',
 		            align: 'center',
+					field: 'caozuo',
 		            formatter: function(value, row, index) {
 		            	if (row.roleId != 1) {
 		                    var actions = [];
 		                    actions.push('<a class="btn btn-success btn-xs ' + editFlag + '" href="javascript:void(0)" onclick="$.operate.edit(\'' + row.roleId + '\')"><i class="fa fa-edit"></i>编辑</a> ');
 		                    actions.push('<a class="btn btn-danger btn-xs ' + removeFlag + '" href="javascript:void(0)" onclick="$.operate.remove(\'' + row.roleId + '\')"><i class="fa fa-remove"></i>删除</a> ');
-		                    var more = [];
-		                    more.push("<a class='btn btn-default btn-xs " + editFlag + "' href='javascript:void(0)' onclick='authDataScope(" + row.roleId + ")'><i class='fa fa-check-square-o'></i>数据权限</a> ");
-		                    more.push("<a class='btn btn-default btn-xs " + editFlag + "' href='javascript:void(0)' onclick='authUser(" + row.roleId + ")'><i class='fa fa-user'></i>分配用户</a>");
-		                    actions.push('<a tabindex="0" class="btn btn-info btn-xs" role="button" data-container="body" data-placement="left" data-toggle="popover" data-html="true" data-trigger="hover" data-content="' + more.join('') + '"><i class="fa fa-chevron-circle-right"></i>更多操作</a>');
 		                    return actions.join('');
 		            	} else {
 		                    return "";
@@ -163,6 +175,15 @@
 			$.modal.confirm("确认要启用角色吗？", function() {
 				$.operate.post(prefix + "/changeStatus", { "roleId": roleId, "status": 0 });
 		    })
+		}
+		function printHtml() {
+			$("#prints").removeClass("noprint");
+			$.table.hideColumn("caozuo");
+			$.table.hideColumn("checkbox");
+			window.print();
+			$("#option").addClass("noprint");
+			$.table.showColumn("caozuo");
+			$.table.showColumn("checkbox");
 		}
 	</script>
 </body>
