--- a/ruoyi-admin/src/main/resources/templates/usertodolist/todolist/add.html
+++ b/ruoyi-admin/src/main/resources/templates/usertodolist/todolist/add.html
@@ -7,12 +7,12 @@
 <body class="white-bg">
     <div class="wrapper wrapper-content animated fadeInRight ibox-content">
         <form class="form-horizontal m" id="form-todolist-add">
-            <div class="form-group">    
-                <label class="col-sm-3 control-label">账号：</label>
-                <div class="col-sm-8">
-                    <input name="userNumber" class="form-control" type="text">
-                </div>
-            </div>
+<!--            <div class="form-group">    -->
+<!--                <label class="col-sm-3 control-label">账号：</label>-->
+<!--                <div class="col-sm-8">-->
+<!--                    <input name="${@permission.getPrincipalProperty('userName')}" values="${@permission.getPrincipalProperty('userName')}" readonly class="form-control" type="text">-->
+<!--                </div>-->
+<!--            </div>-->
             <div class="form-group">    
                 <label class="col-sm-3 control-label is-required">内容：</label>
                 <div class="col-sm-8">
