完成小程序热门民宿的查序，剩统；还修改了info_index和history_index完成按钮跳转对应页面；还微调了history_index的形式和内容

--- a/wx/pages/history/index/history_index.wxml
+++ b/wx/pages/history/index/history_index.wxml
@@ -1,7 +1,11 @@
 <view class="icon-list">
-  <image class='icon' src='/image/icon/house.png'></image>
-  <view class='text'>热门民宿</view>
+  <view class='icon-text' bindtap='toRoomHistory'>
+    <image class='icon' src='/image/icon/house.png'></image>
+    <view class='text'>民宿订单</view>
+  </view>
 
-  <image class='icon' src='/image/icon/food.png'></image>
-  <view class='text'>热门民宿</view>
+  <view class='icon-text' bindtap='toSpecialityHistory'>
+    <image class='icon' src='/image/icon/food.png'></image>
+    <view class='text'>特产订单</view>
+  </view>
 </view>
