--- a/wx/pages/info/landlord/top_landlord.wxml
+++ b/wx/pages/info/landlord/top_landlord.wxml
@@ -4,6 +4,9 @@
     <view class='yue'>
       <view class='describe'>热门民宿榜单</view>
       <view class='explain'>为您选取本平台最热门的5家民宿</view>
+      <button class='sbutton' bindtap='toStatistics'>
+        查看统计图表
+      </button>
     </view>
   </view>
   <!-- <view class='qiehuan' style="width:100%;height:{{height}};background:red"> -->
