--- a/wx/pages/info/landlord/top_landlord.wxss
+++ b/wx/pages/info/landlord/top_landlord.wxss
@@ -4,14 +4,14 @@ page{
 }
 .restMoney{
   width: 100%;
-  height: 200rpx;
+  height: 250rpx;
   background: #f3b328;
   margin: 16rpx 0;
   display: flex;
   justify-content: space-between
 }
 .yue{
-  height: 98rpx;
+  height: 108rpx;
   margin: 60rpx 0 0 56rpx;
 }
 .describe{
@@ -23,6 +23,10 @@ page{
 .explain{
   font-size: 26rpx;
   color: #000000;
+  line-height: 26rpx;
+  margin-top: 26rpx;
+}
+.sbutton{
   line-height: 26rpx;
   margin-top: 26rpx;
 }
